--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,16 +1,7 @@
-<% if user_signed_in? %>
-<h1>hello world</h1>
-<% else %>
 <div class="center hero-unit">
-    <h1>Welcome to One Month Rails</h1>
+    <h1>Welcome! </h1>
+    <p>to <%= link_to 'One Month Rails',  "http://onemonthrails.com" %>
+     </p>
 
-    <h2>
-      You've found the home page for the
-      <a href="http://omrails.com/">One Month Rails</a>
-      first application.
-    </h2>
-
-    <%= link_to "Sign up now!", new_user_registration_path, 
-                                class: "btn btn-large btn-primary" %>
+    <p> <%= link_to 'Sign up now!',  "#" , class: "btn btn-large btn-primary" %> </p>
 </div>
-<% end %>
