--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,7 @@
-<h1>About Us</h1>
+<h1>About</h1>
 <p>
-    <a href="http://omrails.com/">One Month Rails</a>
-    is a project to teach 
-    <a href="http://rubyonrails.org/">Ruby on Rails</a> 
-    in one month. This is the sample application.
+  <%= link_to "One Month Rails", "http://onemonthrails.com" %>
+  is a project to teach 
+  <%= link_to "Ruby on Rails", "http://rubyonrails.org" %>
+  in one month. This is the sample application.
 </p>
