--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>One Month Rails</title>
-    <%= stylesheet_link_tag    "application", :media => "all" %>
-    <%= javascript_include_tag "application" %>
+    <%= stylesheet_link_tag    "styles", :media => "all" %>
+    <%= javascript_include_tag "styles" %>
     <%= csrf_meta_tags %>
   </head>
   <body>
