--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,18 @@
     <title>One Month Rails</title>
     <%= stylesheet_link_tag "styles", :media => "all" %>
     <%= javascript_include_tag "styles" %>
+    <%= javascript_include_tag :defaults %>
     <%= csrf_meta_tags %>
   </head>
   <body>
     <%= render 'layouts/header' %>
+    
     <div class="container">
+        <% flash.each do |name, msg| %>
+          <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+          <% end %>
         <%= yield %>
         <%= render 'layouts/footer' %>
     </div>
   </body>
-</html>
+  </html>
