--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,9 @@
-<div class="center hero-unit">
+<% if user_signed_in? %>
+	<h1>Logged In!<h1>
+<% else %> 
+	<div class="center hero-unit">
     <h1>Welcome! </h1>
-    <p>to <%= link_to 'One Month Rails',  "http://onemonthrails.com" %>
-     </p>
-
-    <p> <%= link_to 'Sign up now!',  "#" , class: "btn btn-large btn-primary" %> </p>
-</div>
+    <p>to <%= link_to 'One Month Rails',  "http://onemonthrails.com" %></p>
+		<p><%= link_to 'Sign up now!', new_user_registration_path, class: "btn btn-large btn-primary" %></p>
+	</div>
+<% end %>
