--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
     <title>One Month Rails</title>
     <%= stylesheet_link_tag "styles", :media => "all" %>
     <%= javascript_include_tag "styles" %>
-    <%= javascript_include_tag :defaults %>
-    <%= csrf_meta_tags %>
+    <%= javascript_include_tag :application %>
+    <%= csrf_meta_tag %>
   </head>
   <body>
     <%= render 'layouts/header' %>
