--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,5 @@
 <div class="footer">
   <small>
-    <%= link_to "One Month Rails", "http://onemonthrails.com" %>
-    by <%= link_to "Mattan Griffel", "http://mattangriffel.com" %>
+   Test footer what should we put down here?
   </small>
 </div>
