--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
           <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
           <% end %>
         <%= yield %>
-        <%= render 'layouts/footer' %>
     </div>
+    <div class="footer">
+    <%= render 'layouts/footer' %>
+  </div>
   </body>
   </html>
