--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,4 +1,6 @@
-</p>
-<%= render @pins %>
-
-
+<%= render 'pages/home' %>
+<% if user_signed_in? %>
+	<div class:"well">
+		<%= render @pins %>
+	</div>
+<% end %>
