--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,3 @@
-<div class="footer">
-  <small>
-   Test footer what should we put down here?
-  </small>
+<div class='well'>
+   This is the footer.
 </div>
