--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="/">FotoShare</a>
+      <a class="brand" href="/">Cloud EconoMe</a>
 
         <div class="nav-collapse">
           <ul class="nav">
