--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>One Month Rails</title>
+    <title>Cloud EconoMe</title>
     <%= stylesheet_link_tag "styles", :media => "all" %>
     <%= javascript_include_tag "styles" %>
     <%= javascript_include_tag :application %>
